# tr-shared-lib

./: .dockerignore  .gitignore  README.md  mypy-baseline.txt  pyproject.toml
.github/workflows/: ci.yml
docs/may-23/changelogs/: hr-attendance-events-changes.md
plans/: 2026-07-24-plan-0-portal-sync-contract.md  admin-listing-softdelete-column-ssot-plan-v1.md  alembic-include-name-schema-filter-plan-v1.md  owner_changed_fix_plan.md  softdelete-mixin-methods-relocation-plan-v1.md
scripts/: purge_stuck_pel.py
src/tr_shared/: __init__.py  exceptions.py  vault.py
src/tr_shared/cache/: __init__.py  exceptions.py  factory.py  helpers.py  interface.py  service.py
src/tr_shared/celery/: __init__.py  async_runner.py  factory.py
src/tr_shared/config/: __init__.py  base.py
src/tr_shared/contracts/: __init__.py  entity_types.py  enums.py  glossary.py  headers.py  taxonomy.py
src/tr_shared/db/: __init__.py  base.py  repository.py  session.py  utils.py
src/tr_shared/events/: __init__.py  consumer.py  dead_letter.py  durable_publisher.py  envelope.py  event_types.py  exceptions.py  helpers.py  outbox_drainer.py  pii.py  producer.py  retry_policy.py  retry_state.py
src/tr_shared/health/: __init__.py  router.py  schemas.py
src/tr_shared/http/: __init__.py  circuit_breaker.py  client.py  internal_client.py
src/tr_shared/integrations/: __init__.py  config_client.py  constants.py  exceptions.py  models.py  pf_oauth.py  (+3 more)
tests/: conftest.py  test_config.py  test_consumer.py  test_contract_enums.py  test_entity_types.py  test_envelope.py  test_event_helpers.py  test_event_payload_base.py  test_exceptions.py  test_exceptions_to_dict.py  test_glossary.py  test_listing_payloads.py  test_new_event_registries.py  test_new_payloads.py  test_p5_hr_finance_payloads.py  test_producer.py  test_repository_lookups.py  test_responses.py  test_retry_policy.py  test_s2_payloads.py  test_task_payloads.py  test_taxonomy.py  test_validators.py  test_version_parity.py  test_web_dependencies.py
tests/contracts/: test_headers.py
tests/integration/: test_event_consumer_pel.py
tests/logging/: test_sanitize_export.py
tests/middleware/: test_error_handler_envelope.py  test_register_exception_handlers.py
tests/schemas/: test_error_envelope.py
(+167 files in other folders)
